# topk

./: .dockerignore  .earthlyignore  .gitignore  .pinact.yaml  .pre-commit-config.yaml  Dockerfile.bench  Earthfile  Makefile  README.md  sdk-bump-version-util.ts
topk-bench/: Cargo.toml  Earthfile  RESULTS.md
topk-bench/src/: config.rs  data.rs  main.rs  s3.rs
topk-bench/src/commands/: cleanup.rs  delete_collection.rs  ingest.rs  list_collections.rs  mod.rs  query.rs
topk-bench/src/providers/: chroma.py  chroma.rs  milvus.py  milvus.rs  mod.rs  pinecone.py  pinecone.rs  qdrant.py  qdrant.rs  topk.py  topk_py.rs  topk_rs.rs  tpuf.py  tpuf_py.rs
topk-bench/src/telemetry/: logs.rs  metrics.rs  mod.rs
topk-cli/: Cargo.toml  README.md  pyproject.toml
topk-cli/homebrew/: topk.rb
topk-cli/src/: cache.rs  client.rs  config.rs  dataset_region_cache.rs  datasets.rs  lib.rs  main.rs  output.rs  persistence.rs  test_context.rs  util.rs
topk-cli/src/commands/: ask.rs  auth.rs  list.rs  (+8 more)
topk-cli/tests/: ask.t  collection.t  collections.t  dataset.t  datasets.t  search.t
topk-cli/topk_cli/: cli.py  convert.py  pyo3.py  schema.py
topk-doc-v1/: Cargo.toml
topk-doc-v1/src/: document.rs  lib.rs  list.rs  value.rs
topk-es/: Cargo.toml  docker-compose.yml
topk-es/src/: date.rs  error.rs  lib.rs  value.rs  vector.rs
topk-es/tests/: aggs.rs  bulk.rs  count.rs  doc.rs  http.rs  info.rs  keyword.rs  knn.rs  mapping.rs  mget.rs  msearch.rs  search.rs  semantic.rs
topk-js/: .gitignore  Cargo.toml  README.md  dts-header.d.ts  foo.mjs  index.d.ts  index.js  jest.config.js  package-lock.json  package.json  query.d.ts  query.js  schema.d.ts  schema.js  tsconfig.docs.json  tsconfig.json  typedoc.json
topk-js/.cargo/: config.toml
topk-js/docs/: README.md  globals.md
topk-js/lib/: data.d.ts  data.js  query.d.ts  query.js  schema.d.ts  schema.js
topk-js/scripts/: patch-types.js
topk-js/src/: binary_expr.rs  client.rs  collection.rs  collections.rs  document.rs  error.rs  expr.rs  field.rs  filter_expr.rs  function_expr.rs  lib.rs  logical_expr.rs  match_.rs  my_box.rs  my_vec.rs  napi_box.rs  query.rs  schema.rs  select_expr.rs  text_expr.rs  unary_expr.rs  utils.rs
topk-js/tests/: collection.spec.ts  collections.spec.ts  delete.spec.ts  documents.spec.ts  expr.spec.ts  expressions.spec.ts  foo.spec.ts  get.spec.ts  index.spec.ts  query_count.spec.ts  query_filter.spec.ts  query_logical.spec.ts  query_select.spec.ts  query_select_union.spec.ts  query_sparse_vector.spec.ts  query_text.spec.ts  query_topk.spec.ts  query_validation.spec.ts  query_vector.spec.ts  semantic_index.spec.ts  setup.ts  test_ask.spec.ts  test_collection_delete.spec.ts  test_collection_struct.spec.ts  test_collection_update.spec.ts  test_collection_upsert.spec.ts  test_collections.spec.ts  test_context_stream.spec.ts  test_data_matrix.spec.ts  test_data_value.spec.ts  test_data_vector_dense.spec.ts  test_data_vector_sparse.spec.ts  test_dataset.spec.ts  test_datasets.spec.ts  test_partitions.spec.ts  test_query_count.spec.ts  test_query_expr.spec.ts  test_query_filter.spec.ts  test_query_filter_contains.spec.ts  test_query_filter_logical.spec.ts  (+23 more)
topk-js/typedoc/: custom-frontmatter-plugin.mjs
topk-protos/: Cargo.toml  build.rs
topk-protos/src/: lib.rs  macros.rs  utils.rs
topk-py/: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  pyrightconfig.json
topk-py/docgen/: main.py  parse.py  render.py
topk-py/source/: conf.py  index.rst  topk_sdk.data.rst  topk_sdk.error.rst  topk_sdk.query.rst  topk_sdk.rst  topk_sdk.schema.rst
topk-py/src/: client.rs  error.rs  lib.rs  query.rs  schema.rs
topk-py/tests/: TEST_COVERAGE_COMPARISON.md  __init__.py  conftest.py  test_ask.py  test_async_ask.py  test_async_collection.py  test_async_collections.py  test_async_dataset.py  test_async_datasets.py  test_async_partitions.py  test_async_search.py  test_collection.py  test_collection_async.py  test_collection_delete.py  test_collection_get.py  test_collection_struct.py  test_collection_update.py  test_collection_upsert.py  test_collections.py  test_data_bytes.py  test_data_list.py  test_data_matrix.py  test_data_struct.py  test_data_vector_dense.py  test_data_vector_sparse.py  test_dataset.py  test_datasets.py  test_delete.py  test_documents.py  test_expr.py  test_get.py  test_partitions.py  test_query_count.py  test_query_expr.py  test_query_filter.py  test_query_filter_contains.py  test_query_filter_not.py  test_query_filter_regexp.py  test_query_filter_starts_with.py  test_query_filter_unions.py  (+21 more)
topk-py/topk_sdk/: __init__.py  __init__.pyi  error.pyi  query.pyi
topk-rs/: Cargo.toml  README.md  build.rs
topk-rs/src/: client.rs  error.rs  errors.rs  internal_error_code.rs  json.rs  lib.rs  query.rs
topk-rs/tests/: test_ask.rs  test_client.rs  test_collection.rs  test_collection_delete.rs  test_collection_get.rs  test_collection_struct.rs  test_collection_update.rs  test_collection_upsert.rs  test_collections.rs  test_dataset_check_handle.rs  test_dataset_delete.rs  test_dataset_list.rs  test_dataset_metadata.rs  test_dataset_update_metadata.rs  test_dataset_upsert.rs  test_datasets.rs  test_delete.rs  test_get.rs  test_group_by.rs  test_partitions.rs  test_query_count.rs  test_query_fetch.rs  test_query_filter.rs  test_query_filter_contains.rs  test_query_filter_list.rs  test_query_filter_not.rs  test_query_filter_regexp.rs  test_query_filter_starts_with.rs  test_query_filter_unions.rs  test_query_hybrid.rs  test_query_limit.rs  test_query_logical.rs  test_query_logical_nary.rs  test_query_matched.rs  test_query_multi_vector.rs  test_query_non_linear.rs  test_query_select.rs  test_query_select_union.rs  test_query_semantic.rs  test_query_sort.rs  (+11 more)
topk-sql/: Cargo.toml  README.md
topk-sql/src/: dialect.rs  lib.rs  table.rs
topk-sql/tests/: test_create_table.rs  test_delete.rs  test_drop_table.rs  test_explain.rs  test_info.rs  test_insert.rs  test_params.rs  test_partitions.rs  test_regex.rs  test_select.rs  test_session.rs  test_types.rs  test_update.rs
topk-test-macros/: Cargo.toml
(+545 files in other folders)
