[package]
name = "topk-bench"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.77" }
async-channel = { version = "2.3.1" }
clap = { version = "4.5.29", features = ["derive"] }
futures = { version = "0.3.31" }
colored = { version = "2.2.0" }
tracing = { version = "0.1.40" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
metrics = { version = "0.24.1" }
prost = { version = "0.14.1" }
topk-rs = { path = "../topk-rs" }
topk-py = { path = "../topk-py" }
rustls = { version = "0.23.29", features = ["ring"] }
rand = { version = "0.8.5" }
uuid = { version = "1.10.0", features = ["v4"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
config = { version = "0.15.6" }
metrics-util = { version = "0.19.0" }
once_cell = { version = "1.20.2" }
hdrhistogram = "7.5.4"
parquet = "57.0.0"
arrow = "57.0.0"
arrow-array = "57.0.0"
arrow-schema = "57.0.0"
async-trait = { version = "0.1.83" }
pyo3 = { version = "0.25.0", features = ["auto-initialize"] }
ctrlc = "3.5.1"
chrono = "0.4.30"
thiserror = "1.0.65"
aws-config = "1"
aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
tempfile = "3.23.0"
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0" }
rand_distr = { version = "0.4.3" }
