[package]
name = "topk-cli"
version = "0.8.0"
edition = "2021"
description = "TopK CLI"
license = "MIT"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"

[lib]
name = "topk"
path = "src/lib.rs"

[[bin]]
name = "topk"
path = "src/main.rs"

[dependencies]
topk-rs = { path = "../topk-rs" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
anyhow = { version = "1" }
serde_json = { version = "1" }
indicatif = { version = "0.17" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = { version = "2" }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
bytesize = { version = "1" }
sha2 = { version = "0.10" }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
test-context = { version = "0.3" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
