[package]
name = "topk-cli"
version = "0.8.0"
edition = "2021"
description = "TopK CLI"
license = "MIT"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"

[lib]
name = "topk"
path = "src/lib.rs"

[[bin]]
name = "topk"
path = "src/main.rs"

[dependencies]
topk-rs = { path = "../topk-rs" }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = { version = "4" }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
anyhow = { version = "1" }
async-trait = "0.1"
serde_json = { version = "1" }
indicatif = { version = "0.17" }
tracing = { version = "0.1" }
regex = { version = "1" }
futures = { version = "0.3" }
serde = { version = "1", features = ["derive"] }
bytesize = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = { version = "7" }
terminal_size = "0.4"
glob = "0.3"
shellexpand = "3"
sha2 = "0.10"
dirs = "5"
open = "5"
toml = { version = "0.8", features = ["preserve_order"] }
dialoguer = "0.11"
colored = "2"
tempfile = "3"
humantime = "2"

[dev-dependencies]
assert_cmd = "2"
test-context = { version = "0.3" }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
