[package]
name = "topk-es"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-trait = { version = "0.1.83" }
axum = { version = "0.7.9" }
http = { version = "1.4.0" }
regex = { version = "1.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.12.0" }
thiserror = { version = "1.0.65" }
topk-rs = { path = "../topk-rs", features = ["json"] }

[dev-dependencies]
topk-test-macros = { path = "../topk-test-macros" }
elasticsearch = { version = "8.15.0-alpha.1", default-features = false, features = ["native-tls"] }
futures = { version = "0.3.31" }
rstest = { version = "0.23.0" }
serde_json = { version = "1.0" }
test-context = { version = "0.3.0" }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4"] }
