[package]
name = "topk-js"
version = "0.1.15"
edition = "2021"
description = "TopK JavaScript SDK with TypeScript support"
license-file = "LICENSE"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
# TODO: Upgrade to stable version
napi = { version = "3.0.0-alpha.33", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = { version = "3.0.0-alpha.29" }
topk-protos = { path = "../topk-protos" }
topk-rs = { path = "../topk-rs" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
strip = "symbols"
