[package]
name = "topk-js"
version = "0.8.0"
edition = "2021"
description = "TopK JavaScript SDK with TypeScript support"
license-file = "LICENSE"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "3.8.4", default-features = false, features = [
    "napi4",
    "tokio_rt",
    "serde-json",
] }
napi-derive = { version = "3.5.3" }
topk-rs = { path = "../topk-rs" }
half = { version = "2.7.1", features = ["bytemuck"] }
float8 = { version = "0.5.0", features = ["bytemuck"] }
futures-util = "0.3"

[build-dependencies]
napi-build = "2.1.5"

[profile.release]
lto = true
strip = "symbols"

[workspace]
