[package]
name = "topk-protos"
version = "0.3.5"
edition = "2021"
description = "TopK Protocol Buffers"
license = "MIT"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[dependencies]
map-macro = { version = "0.3.0" }
prost = { version = "0.13.0" }
prost-types = { version = "0.13.0" }
serde = { version = "1.0", features = ["derive"] }
thiserror = { version = "1.0.65" }
tonic = { version = "0.12.3" }
uuid = { version = "1.11.0" }
validator = { version = "0.19.0", features = ["derive"] }
anyhow = { version = "1.0.93" }
tracing = { version = "0.1.40" }
serde_json = { version = "1.0" }

[dev-dependencies]
rand = { version = "0.8.5" }
rstest = { version = "0.23.0" }

[build-dependencies]
tonic-build = { version = "0.12.3" }
