[package]
name = "topk-py"
version = "0.4.5"
edition = "2021"
description = "TopK Python SDK"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[dependencies]
pyo3 = { version = "0.25.0", features = ["py-clone"] }
topk-rs = { path = "../topk-rs" }
tokio = { version = "1.35", features = ["full"] }
anyhow = { version = "1.0.77" }
thiserror = { version = "1.0.65" }
tracing-subscriber = { version = "0.3.19" }
