[package]
name = "topk-py"
version = "0.7.6"
edition = "2021"
description = "TopK Python SDK"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[dependencies]
pyo3 = { version = "0.27.0", features = ["py-clone"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["tokio-runtime"] }
topk-rs = { path = "../topk-rs" }
tokio = { version = "1.35", features = ["full"] }
numpy = { version = "0.27.1", features = ["half"] }
half = { version = "2.7.1", features = ["bytemuck"] }
float8 = { version = "0.5.0", features = ["bytemuck"] }
