[package]
name = "topk-rs"
version = "0.3.5"
edition = "2021"
description = "TopK Rust SDK"
license = "MIT"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[features]
default = []
in_memory = []

[dependencies]
topk-protos = { path = "../topk-protos" }
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = { version = "1.0.77" }
thiserror = { version = "1.0.65" }
tracing = { version = "0.1.40" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5" }
futures-util = { version = "0.3.31" }

[dev-dependencies]
test-context = { version = "0.3.0" }
uuid = { version = "1.10.0", features = ["v4"] }
