[package]
name = "topk-rs"
version = "0.6.5"
edition = "2021"
description = "TopK Rust SDK"
license = "MIT"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[features]
default = []
in_memory = []

[dependencies]
tonic = { version = "0.14.2", features = ["tls-ring", "tls-native-roots"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = { version = "1.0.77" }
thiserror = { version = "1.0.65" }
tracing = { version = "0.1.40" }
prost = { version = "0.14.1" }
prost-types = { version = "0.14.1" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.8.5" }
futures-util = { version = "0.3.31" }
bytes = { version = "1.8.0" }
tonic-prost = { version = "0.14.2" }
bytemuck = { version = "1.23.2", features = ["extern_crate_alloc"]}

[dev-dependencies]
test-context = { version = "0.3.0" }
uuid = { version = "1.10.0", features = ["v4"] }
assert_approx_eq = "1.1.0"

[build-dependencies]
tonic-prost-build = { version = "0.14.2" }
