[package]
name = "topk-sql"
version = "0.9.3"
edition = "2024"
description = "TopK SQL"
license = "MIT"
repository = "https://github.com/topk-io/topk"
homepage = "https://topk.io"
documentation = "https://docs.topk.io"

[dependencies]
regex = { version = "1.12" }
sqlparser = { version = "0.61", features = ["visitor"] }
strum = { version = "0.26.3" }
strum_macros = { version = "0.26.4" }
serde_json = { version = "1.0" }
thiserror = { version = "1.0.65" }
topk-rs = { path = "../topk-rs" }
half = { version = "2.7.1" }
float8 = { version = "0.5.0" }

[dev-dependencies]
anyhow = { version = "1.0.93" }
pretty_assertions = { version = "1.4.1" }
rstest = { version = "0.23.0" }
test-context = { version = "0.3.0" }
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "json",
    "tls-rustls",
] }
uuid = { version = "1.11.0", features = ["v4"] }
