[package]
name = "topk-test-macros"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
futures = { version = "0.3.31" }
rstest = { version = "0.23.0" }
test-context = { version = "0.3.0" }
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
